fixed the alignment

--- a/index.css
+++ b/index.css
@@ -61,6 +61,9 @@ p{
   #margin{
       margin: 0 10em;
   }
+  .music{
+      text-align: center;
+  }
   .p2{
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
